# ledger

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEDGER-COMMERCIAL-GRADE-PLAN.md  LEDGER_ENFORCEMENT_PLAN.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  plugin.json  tsconfig.json  tsconfig.typecheck.json  tsup.config.ts  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.clinerules/: ledger.md
.github/: copilot-instructions.md  dependabot.yml
commands/: audit.md  cite.md  ledger-audit.toml  ledger-cite.toml  ledger-reconcile.toml  ledger-review.toml  ledger-sim.toml  ledger-verify.toml  reconcile.md  review.md  sim.md  verify.md
docs/: ANTI-PATTERNS.md  BENCHMARK.md  CITATION-COVERAGE.md  CORE-PROTOCOL.md  EXAMPLE-LEDGER-VERIFY-OUTPUT.md  PYTHON_CANONICAL_EXTENSION_PLAN.md  QUICKSTART-SKILLS.md  RELEASING.md  SCOPE-AND-LAYERS.md  SUCCESS-CHECKLIST.md  SUPER_LEDGER_AUDIT_PROTOCOL.md  agent-persona.md  claude-plugins.md  roadmap.md
eval/: ai-adversarial-test.ts  dataset.ts  full-feature-adversarial.test.ts  harness.test.ts  harness.ts  proposers.ts  run.ts
examples/: alpha-max-core.ts  crypto-cex.ts  financial-core-utilities.ts  (+5 more)
reference-implementations/python/: .gitignore  pyproject.toml  reliability_100.py
reference-implementations/python/ledger/: README.md  __init__.py  account.py  audit_scanner.py  closing.py  depreciation.py  fx_translation.py  journal.py  ledger.py  lots.py  money.py  periods.py  trading.py  verify.py
reference-implementations/python/ledger/examples/: simple_bank.py  trace_example.py
reference-implementations/python/ledger/tests/: test_canonical.py  verify_audit_readiness.py
(+148 files in other folders)
